[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engine"
version = "0.1.0"
description = "在 AgentScope 之上扩展的、类 LangGraph 的 Agent 图编排框架，并提供面向前端可视化的 REST 接口"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# 接入真实 AgentScope agent（OpenAI）
agentscope = ["agentscope>=2.0.0", "openai>=1.30.0", "python-dotenv>=1.0.0"]
# 启动前端可视化 REST 服务
server = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0", "pydantic>=2.0.0"]
# 测试
test = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]
# travel_planner 示例的 Web 工具（安装 playwright 后需 python -m playwright install chromium）
examples = ["ddgs>=9.0.0", "playwright>=1.40.0"]

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
